--- a/note/note04.tex
+++ b/note/note04.tex
@@ -827,7 +827,7 @@
     \end{align*}
   \end{minipage}
     %\item 令 $\ds u = (\sin^{-1} x)^2$, 則 $\ds\text{d}u = 2\sin^{-1}x\frac{1}{\sqrt{1 - x^2}}\,\text{d}x$; $\ds\text{d}v = \text{d}x$, 則 $\ds v = x$.  故 $\ds\int(\sin^{-1} x)^2\,\text{d}x = (\sin^{-1} x)^2\cdot x - \int x\cdot 2\sin^{-1}x\frac{1}{\sqrt{1 - x^2}}\,\text{d}x = (\sin^{-1} x)^2\cdot x + 2\int\!\sin^{-1}x\cdot\frac{-x}{\sqrt{1 - x^2}}\,\text{d}x$. 令 $\ds u = \sin^{-1} x$, 則 $\ds\text{d}u = \frac{1}{\sqrt{1 - x^2}}\,\text{d}x$; $\ds\text{d}v = \frac{-x}{\sqrt{1 - x^2}}\,\text{d}x$, 則 $\ds v = \sqrt{1 - x^2}$.  故 $\ds\int\!\sin^{-1}x\cdot\frac{-x}{\sqrt{1 - x^2}}\,\text{d}x = \sin^{-1}x\cdot\sqrt{1 - x^2} - \int\!\sqrt{1 - x^2}\cdot\frac{1}{\sqrt{1 - x^2}}\,\text{d}x = \sin^{-1}x\cdot\sqrt{1 - x^2} - \int 1\,\text{d}x = \sin^{-1}x\cdot\sqrt{1 - x^2} - x$. 以上, $\ds\int(\sin^{-1} x)^2\,\text{d}x = (\sin^{-1} x)^2\cdot x + 2\,(\sin^{-1}x\cdot\sqrt{1 - x^2} - x) = x\,(\sin^{-1} x)^2 + 2\sqrt{1 - x^2}\,\sin^{-1}x - 2x + c$
-    \item $\ds\int(2x^2 + 1)\,e^{x^2}\,\text{d}x = \int\!2x^2\,e^{x^2}\,\text{d}x + \int\!e^{x^2}\,\text{d}x$. 令 $\ds u = x$, 則 $\ds\text{d}u = e^x\,\text{d}x$; $\ds\text{d}v = 2x\,e^{x^2}\,\text{d}x$, 則 $\ds v = e^{x^2}$. 故 $\ds\int\!2x^2\,e^{x^2}\,\text{d}x = x\cdot e^{x^2} - \int\!e^{x^2}\text{d}x$; 原式 $\ds\int\!2x^2\,e^{x^2}\,\text{d}x + \int\!e^{x^2}\,\text{d}x = x\cdot e^{x^2} - \int\!e^{x^2}\text{d}x + \int\!e^{x^2}\,\text{d}x = xe^{x^2}$
+    \item $\ds\int(2x^2 + 1)\,e^{x^2}\,\text{d}x = \int\!2x^2\,e^{x^2}\,\text{d}x + \int\!e^{x^2}\,\text{d}x$. 令 $\ds u = x$, 則 $\ds\text{d}u = \text{d}x$; $\ds\text{d}v = 2x\,e^{x^2}\,\text{d}x$, 則 $\ds v = e^{x^2}$. 故 $\ds\int\!2x^2\,e^{x^2}\,\text{d}x = x\cdot e^{x^2} - \int\!e^{x^2}\text{d}x$; 原式 $\ds\int\!2x^2\,e^{x^2}\,\text{d}x + \int\!e^{x^2}\,\text{d}x = x\cdot e^{x^2} - \int\!e^{x^2}\text{d}x + \int\!e^{x^2}\,\text{d}x = xe^{x^2}$
     \item 令 $\ds w = \ln x$, 則 $\ds e^w = x$, $\ds\text{d}x = e^w\,\text{d}w$, 故 $\ds\int\!\sin(\ln x)\,\text{d}x = \int\!\sin w\cdot e^w\,\text{d}w = \int e^w\,\sin w\,\text{d}w = \frac{e^w(\sin w - \cos w)}{2} = \frac{x\,(\sin(\ln x) - \cos(\ln x))}{2} + c$ \\
       \begin{minipage}{0.15\textwidth}
         \begin{tikzpicture}[yscale=0.75]
