--- a/note/note01.tex
+++ b/note/note01.tex
@@ -429,11 +429,11 @@
 \end{sol}
 
 \begin{ex}
-  證明: 奇數次多項式方程式必有實根. 
+  證明: 奇數次實係數多項式方程式必有實根. 
 \end{ex}
 
 \begin{sol}
-  令奇數次多項式 $f(x)$ 為 $\ds f(x) = a_{2n + 1}x^{2n + 1} + a_{2n}x^{2n} + \cdots + a_1 x + a_0$; 不失一般性令 $a_{2n + 1} > 0$. 由 $\ds\lim_{x\to\infty}f(x) = \infty$ 與 $f$ 之連續性, $\exists\,\alpha\,(f(\alpha) > 0)$. 又由 $\ds\lim_{x\to-\infty}f(x) = -\infty$ 與 $f$ 之連續性, $\exists\,\beta\,(f(\beta) < 0)$. 故由 Bolzano 定理知存在 $c$ 介於 $\alpha$, $\beta$ 之間使得 $f(c) = 0$.  
+  令奇數次實係數多項式 $f(x)$ 為 $\ds f(x) = a_{2n + 1}x^{2n + 1} + a_{2n}x^{2n} + \cdots + a_1 x + a_0$, $a_k\in\mathbb{R}$, $k = 0, 1, 2, \ldots, 2n + 1$; 不失一般性令 $a_{2n + 1} > 0$. 由 $\ds\lim_{x\to\infty}f(x) = \infty$ 與 $f$ 之連續性, $\exists\,\alpha\,(f(\alpha) > 0)$. 又由 $\ds\lim_{x\to-\infty}f(x) = -\infty$ 與 $f$ 之連續性, $\exists\,\beta\,(f(\beta) < 0)$. 故由 Bolzano 定理知存在 $c$ 介於 $\alpha$, $\beta$ 之間使得 $f(c) = 0$.  
 \end{sol}
 
 %\begin{ex}
