--- a/note/qna.tex
+++ b/note/qna.tex
@@ -151,7 +151,7 @@
 \end{ex}
 
 \begin{sol}
-  $\ds\int\!\frac{1}{1 + \tan\theta}\,\text{d}\theta = \int\!\frac{1}{1 + \frac{\sin\theta}{\cos\theta}}\,\text{d}\theta = \int\!\frac{\cos\theta}{\cos\theta + \sin\theta}\,\text{d}\theta$, 為上題當 $a = b = 1$ 之 $T_1$: 答案為 $\ds\frac{x - \ln|\cos x + \sin x|}{2}$. 
+  $\ds\int\!\frac{1}{1 + \tan\theta}\,\text{d}\theta = \int\!\frac{1}{1 + \frac{\sin\theta}{\cos\theta}}\,\text{d}\theta = \int\!\frac{\cos\theta}{\cos\theta + \sin\theta}\,\text{d}\theta$, 為上題當 $a = b = 1$ 之 $T_1$: 答案為 $\ds\frac{\theta - \ln|\cos\theta + \sin\theta|}{2}$. 
 \end{sol}
 
 \myline
