--- a/note/note02.tex
+++ b/note/note02.tex
@@ -167,18 +167,18 @@
 
 \begin{ex}
   以極限定義求以下 $f(x)$ 之導函數 $f'(x)$, 當 $f(x)$ 為 
-  \setlength{\columnsep}{-10mm}
-  \begin{multicols}{9}
+  \setlength{\columnsep}{-3mm}
+  \begin{multicols}{8}
     \begin{enumerate}\setlength\itemsep{0em}
-      \item $x$ 
+      %\item $x$ 
       \item $x^2$
       \item $x^4$
       \item $\frac{1}{x}$ 
       \item $\frac{1}{x^5}$
       \item $\frac{1}{x^2 + 3}$
       \item $\sqrt{x + 1}$
-      \item $\sqrt{x - 1}$
       \item $\sqrt{x^2 + 1}$
+      \item $\sqrt[3]{1 - x^3}$
     \end{enumerate}
   \end{multicols}
 \end{ex}
@@ -186,15 +186,16 @@
 \begin{sol}
   \begin{enumerate}\setlength\itemsep{0em}
     \item[]
-    \item $\ds f'(x) = \lim_{h\to 0}\frac{(x + h) - x}{h} = \lim_{h\to 0}\frac{h}{h} = \lim_{h\to 0}\,1 = 1$. 
+    %\item $\ds f'(x) = \lim_{h\to 0}\frac{(x + h) - x}{h} = \lim_{h\to 0}\frac{h}{h} = \lim_{h\to 0}\,1 = 1$. 
     \item $\ds f'(x) = \lim_{h\to 0}\frac{(x + h)^2 - x^2}{h} = \lim_{h\to 0}\frac{2 x h + h^2}{h} = \lim_{h\to 0}\,(2x + h) = 2x$. 
     \item $\ds f'(x) = \lim_{h\to 0}\frac{(x + h)^4 - x^4}{h} = \lim_{h\to 0}\frac{4 x^3 h + 6x^2 h^2 + 4 x h^3 + h^4}{h} = \lim_{h\to 0}\,(4x^3 + 6x^2 h + 4 x h^2 + h^3) = 4x^3$. 
     \item $\ds f'(x) = \lim_{h\to 0}\frac{\frac{1}{x + h} - \frac{1}{x}}{h} = \lim_{h\to 0}\frac{x - (x + h)}{h\,(x + h)\,x} = \lim_{h\to 0}\frac{-h}{h\,(x + h)\,x} = \lim_{h\to 0}\frac{-1}{(x + h)\,x} = \frac{-1}{x^2} = (-1)\,x^{-2}$. 
     \item $\ds f'(x) = \lim_{h\to 0}\frac{\frac{1}{(x + h)^5} - \frac{1}{x^5}}{h} = \lim_{h\to 0}\frac{x^5 - (x + h)^5}{h\,(x + h)^5\,x^5} \\ = \lim_{h\to 0}\frac{(-h)(x^4 + x^3(x + h) + x^2(x + h)^2 + x^3(x + h) + (x + h)^4)}{h\,(x + h)^5\,x^5}\\ = \lim_{h\to 0}\frac{-(x^4 + x^3(x + h) + x^2(x + h)^2 + x^3(x + h) + (x + h)^4)}{(x + h)^5\,x^5} = \frac{-5x^4}{x^{10}} = \frac{-5}{x^6} = (-5)\,x^{-6}$. 
    \item $\ds f'(x) = \lim_{h\to 0}\frac{\frac{1}{(x + h)^2 + 3} - \frac{1}{x^2 + 3}}{h} = \lim_{h\to 0}\frac{(x^2 + 3) - ((x + h)^2 + 3)}{h\,((x + h)^2 + 3)\,(x^2 + 3)} = \lim_{h\to 0}\frac{(2x + h)\,(-h)}{h\,((x + h)^2 + 3)\,(x^2 + 3)} \\ = \lim_{h\to 0}\frac{-(2x + h)}{((x + h)^2 + 3)(x^2 + 3)} = \frac{-2x}{(x^2 + 3)^2}$. 
    \item $\ds f'(x) = \lim_{h\to 0}\frac{\sqrt{x + h + 1} - \sqrt{x + 1}}{h} = \lim_{h\to 0}\frac{h}{h\,(\sqrt{x + h + 1} + \sqrt{x + 1})} = \frac{1}{2\sqrt{x + 1}}$. 
-   \item $\ds f'(x) = \lim_{h\to 0}\frac{\sqrt{x + h - 1} - \sqrt{x - 1}}{h} = \lim_{h\to 0}\frac{h}{h\,(\sqrt{x + h - 1} + \sqrt{x - 1})} = \frac{1}{2\sqrt{x - 1}}$. 
    \item $\ds f'(x) = \lim_{h\to 0}\frac{\sqrt{(x + h)^2 + 1} - \sqrt{x^2 + 1}}{h} = \lim_{h\to 0}\frac{h\,(2x + h)}{h\,(\sqrt{(x + h)^2 + 1} + \sqrt{x^2 + 1})} = \frac{x}{\sqrt{x^2 + 1}}$. 
+   \item $\ds f'(x) = \lim_{h\to 0}\frac{\sqrt[3]{1 - (x + h)^3} - \sqrt[3]{1 - x^3}}{h}\qquad\qquad(\text{使用}\;a^3 - b^3 = (a - b)(a^2 + ab + b^2)) \\= \lim_{h\to 0}{\frac{1 - (x + h)^3 - (1 - x^3)}{h\,\big(\big(\sqrt[3]{1 - (x + h)^3}\big)^2 + \sqrt[3]{1 - (x + h)^3}\,\sqrt[3]{1 - x^3} + \big(\sqrt[3]{1 - x^3}\big)^2\big)}} \\
+     = \lim_{h\to 0}\frac{(-h)(x^2 + x(x + h) + (x + h)^2)}{h\,\big(\big(\sqrt[3]{1 - (x + h)^3}\big)^2 + \sqrt[3]{1 - (x + h)^3}\,\sqrt[3]{1 - x^3} + \big(\sqrt[3]{1 - x^3}\big)^2\big)} = \frac{-3x^2}{3\big(\sqrt[3]{1 - x^3}\big)^2} = \frac{-x^2}{\big(\sqrt[3]{1 - x^3}\big)^2}$. 
   \end{enumerate}
 \end{sol}
 
