--- a/note/note03.tex
+++ b/note/note03.tex
@@ -178,10 +178,10 @@
   $f(x)$ 在 $[a, b]$ 連續, 在 $(a, b)$ 可微. 若 $\ds\forall\,x\in(a, b)$ 
   \begin{multicols}{2}
     \begin{enumerate}\setlength\itemsep{0em}
-      \item $f'(x) > 0$ $\ifff$ $f$ 在 $[a, b]$ 嚴格遞增. 
-      \item $f'(x) < 0$ $\ifff$ $f$ 在 $[a, b]$ 嚴格遞減. 
-      \item $f'(x) \geqslant 0$ $\ifff$ $f$ 在 $[a, b]$ 遞增. 
-      \item $f'(x) \leqslant 0$ $\ifff$ $f$ 在 $[a, b]$ 遞減. 
+      \item $f'(x) > 0$ $\ie$ $f$ 在 $[a, b]$ 嚴格遞增. 
+      \item $f'(x) < 0$ $\ie$ $f$ 在 $[a, b]$ 嚴格遞減. 
+      \item $f'(x) \geqslant 0$ $\ie$ $f$ 在 $[a, b]$ 遞增. 
+      \item $f'(x) \leqslant 0$ $\ie$ $f$ 在 $[a, b]$ 遞減. 
     \end{enumerate}
   \end{multicols}
 \end{prp}
