Update note02, note03

--- a/note/note02.tex
+++ b/note/note02.tex
@@ -808,7 +808,7 @@
       \item $\ds\left(\sin e^x\right)' = {\color{C2}\;e^x \cos e^x}$
       \item $\ds\left(e^{\sin^2x}\right)' = {\color{C2}\;2e^{\sin^2x}\sin x\cos x}$
       \item $\ds\left(\sin x\cos2x\right)' = {\color{C2}\;\cos x\cos2x - 2\sin x\sin2x}$
-      \item $\ds\left(\ln(\sec x + \tan x)\right)' = {\color{C2}\;\sec x}$
+      \item $\ds\left(\ln(\csc x + \cot x)\right)' = {\color{C2}\;-\csc x}$
       \item $\ds\left(\frac{x}{\sin x}\right)' = {\color{C2}\;\frac{\sin x - x\cos x}{\sin^2x}}$
       %\item $\ds\left(\cos^{-1}\!\frac{2x}{1 + x^2}\right)' = {\color{C2}\;-\frac{2}{1 + x^2}\frac{|1 - x^2|}{1 - x^2}}$
       \item $\ds\left(x \ln x - x\right)' = {\color{C2}\;\ln x}$
