--- a/note/note03.tex
+++ b/note/note03.tex
@@ -505,8 +505,8 @@
     \item[]
     \item 若 $f$ 在 $c$ 有極大值, 則 $\ds\exists\,h_0 > 0$ 使 $\ds f(c)\geqslant f(x),\;\forall\,x\in B(c, h_0)\,\cap\,\dom{f}$. 
       \begin{itemize}\setlength\itemsep{0em}
-      \item 取 $\ds x \in B(c, h_0)\,\cap\,\dom{f}$ 且 $x < c$, $\ds\frac{f(x) - f(c)}{x - c} \geqslant 0 \ie f'(c) = \lim_{x\to c-}\frac{f(x) - f(c)}{x - c}\geqslant 0$
-      \item 取 $\ds x \in B(c, h_0)\,\cap\,\dom{f}$ 且 $x > c$, $\ds\frac{f(x) - f(c)}{x - c} \leqslant 0 \ie f'(c) = \lim_{x\to c+}\frac{f(x) - f(c)}{x - c}\leqslant 0$
+      \item 取 $\ds x \in B(c, h_0)\,\cap\,\dom{f}$ 且 $x < c$, 則 $\ds\frac{f(x) - f(c)}{x - c} \geqslant 0 \ie f'(c) = \lim_{x\to c-}\frac{f(x) - f(c)}{x - c}\geqslant 0$
+      \item 取 $\ds x \in B(c, h_0)\,\cap\,\dom{f}$ 且 $x > c$, 則 $\ds\frac{f(x) - f(c)}{x - c} \leqslant 0 \ie f'(c) = \lim_{x\to c+}\frac{f(x) - f(c)}{x - c}\leqslant 0$
     \end{itemize}
     故 $f'(c) = 0$. 
   \item 若 $f$ 在 $c$ 有極小值, 則 $\ds\exists\,h_1 > 0$ 使 $\ds f(c)\leqslant f(x),\;\forall\,x\in B(c, h_1)\,\cap\,\dom{f}$. 
