--- a/note/integrals.tex
+++ b/note/integrals.tex
@@ -34,7 +34,7 @@
 }
 
 \theoremstyle{definition}
-\newtheorem*{problem}{Problem}
+\newtheorem{problem}{Problem}
 \newtheorem*{solution}{Solution}
 
 \usepackage{pgfplots}
